# SignalControl

./: .gitignore  CMakeLists.txt  Design.md  README.md  ReleaseNotes.md  TODO.md  library.properties
Arduino/: Arduino.h  README.md  Streaming.h
examples/Signal2AspectWithButton/: Signal2AspectWithButton.ino
examples/Signal3AspectWithBlockDistanceInput/: Signal3AspectWithBlockDistanceInput.ino
examples/Signal3AspectWithDistanceTimer/: Signal3AspectWithDistanceTimer.ino  Signal3Aspect_with_DistanceTimer.ino
examples/TwoIndependentSignal3Aspect/: TwoIndependentSignal3Aspect.ino  two_independent_Signal3Aspect.ino
examples/TwoSignal3AspectJoiningPoint/: TwoSignal3AspectJoiningPoint.ino
src/: AndInput.h  BistableInput.h  BlinkingLight.h  BlockDistanceInput.h  DigitalInput.h  DistanceChoice.h  DistanceInput.h  DistanceTimer.h  DistanceToDigitalInput.h  DistanceWithCondition.h  FastLight.h  FastPWMLight.h  InvertInput.h  KeypadInput.h  LInkedSignal3Aspect.h  Light.h  OrInput.h  PinInput.h  SettableInput.h  Signal2Aspect.h  Signal3Aspect.h  Signal3AspectState.h  Signal4Aspect.h  SignalFyrSken.h  SlowLight.h  SlowPWMLight.h  TwoPinInput.h  mv.h
test/: Arduino.hpp  ArduinoMock.cpp  ArduinoMock.hpp  Makefile  MockDistanceInput.h  MockInput.h  MockLight.h  README.md  TestTools.cpp  TestTools.hpp  signal.ino.cpp  sketchSignal2AspectWithButton.cpp  sketchSignal3AspectWithBlockDistanceInput.cpp  sketchSignal3AspectWithDistanceTimer.cpp  sketchTwoIndependentSignal3Aspect.cpp  sketchTwoSignal3AspectJoiningPoint.cpp  testAll.cpp  testAndInput.cpp  testAndInput.h  testArduino.cpp  testArduino.hpp  testBistableInput.cpp  testBistableInput.h  testBlinkingLight.cpp  testBlinkingLight.h  testBlockDistanceInput.cpp  testBlockDistanceInput.h  testBlockTopologies.cpp  testBlockTopologies.h  testDistanceChoice.cpp  testDistanceChoice.h  testDistanceTimer.cpp  testDistanceTimer.h  testDistanceToDigitalInput.cpp  testDistanceToDigitalInput.h  testDistanceWithCondition.cpp  testDistanceWithCondition.h  testFastLight.cpp  testFastLight.h  testInvertInput.cpp  (+21 more)
